Creamos un equipo.html y ponemos las fotos de los participantes con una descripción y git como forma de contacto.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #aa8caf;
+    background-color: rgba(128, 58, 185, 0.568);
 }
 
 #logoGrandePaginaPrincipal{
@@ -72,4 +72,13 @@ body{
 
 #footer{
     margin-top: 50px;
+}
+
+#tituloEquipo{
+    text-align: center;
+    font-size: 50px;
+    text-align: center;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 20px;
 }
