--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgba(128, 58, 185, 0.568);
+    font-family: 'Zilla Slab', serif;
 }
 
 #logoGrandePaginaPrincipal{
@@ -13,7 +14,7 @@ body{
     font-size: 50px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
 
@@ -21,7 +22,7 @@ body{
     font-size: 18px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
 
@@ -35,7 +36,7 @@ body{
     font-size: 30px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
 
@@ -43,7 +44,7 @@ body{
     font-size: 18px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
 
@@ -58,7 +59,7 @@ body{
     font-size: 30px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
 
@@ -66,7 +67,7 @@ body{
     font-size: 18px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
 
@@ -79,7 +80,7 @@ body{
     font-size: 50px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
 
@@ -88,6 +89,7 @@ body{
     font-size: 50px;
     text-align: center;
     color: #fff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     margin-top: 20px;
 }
+
